Chapter 4 : Simple Logistic Regression Modeling

--- a/Python/Introduction to Regression with statsmodels in Python/takeaways.ipynb
+++ b/Python/Introduction to Regression with statsmodels in Python/takeaways.ipynb
@@ -203,6 +203,53 @@
     "plt.show()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from statsmodels.formula.api import logit\n",
+    "model = logit(\"target ~ x_var\", data=df).fit()\n",
+    "print(model.params)\n",
+    "# Visualize logistic model\n",
+    "sns.regplot(x=\"x_var\", y=\"target\", data=df, ci=None, logistic=True)\n",
+    "X_test = pd.DataFrame({\"x_var\": np.arange(-1, 6.25, 0.25)})\n",
+    "y_pred_prob = model.predict(X_test)\n",
+    "y_pred = np.round(y_pred_prob)\n",
+    "# Odds ratio : p/(1-p) or probability of something happenning over not happening\n",
+    "odds_ratio = y_pred_prob / (1- y_pred_prob)\n",
+    "# Visualize odds ratio / log odds ratio : How likely or unlikely an occurrence may happen\n",
+    "sns.lineplot(x=\"x_var\", y=\"odds_ratio\", data=df)\n",
+    "plt.axhline(y=1, linestyle=\"dotted\")\n",
+    "plt.yscale(\"log\") # If you want to make the curve into linear make y : np.log(odds_ratio)\n",
+    "plt.show()\n",
+    "# Confusion matrix\n",
+    "conf_matrix = model.pred_table()\n",
+    "TN = conf_matrix[0,0]\n",
+    "TP = conf_matrix[1,1]\n",
+    "FN = conf_matrix[1,0]\n",
+    "FP = conf_matrix[0,1]\n",
+    "# Visualize confusion matrix\n",
+    "from statsmodels.graphics.mosaicplot import mosaic\n",
+    "mosaic(conf_matrix)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
