Chapter 4 : Discovering Interpretable Features

--- a/Python/Unsupervised Learning in Python/takeaways.ipynb
+++ b/Python/Unsupervised Learning in Python/takeaways.ipynb
@@ -29,7 +29,7 @@
     "        - Hierarchical clustering : \n",
     "            - split into tree of subgroups\n",
     "            - All leaf groups are in different cluster\n",
-    "            - the closest 2 clusters merge in each step based on distance (linkage condition)\n",
+    "            - 2 clusters merge in each step based on distance (linkage condition)\n",
     "                - for n samples, n-1 steps are taken to complete the whole merge process\n",
     "                - complete linkage = when distance between clusters is maximum distance between samples\n",
     "                - single linkage = when distance between clusters is minimum distance between samples\n",
@@ -47,6 +47,21 @@
     "                - due to rotation, any correlated features become decorrelated\n",
     "            - Step 2  dimension reduction :\n",
     "                - Intrinsic dimension = number of features needed to approximate the dataset\n",
+    "        - NMF\n",
+    "            - Non-negative matrix factorization\n",
+    "            - De-composes samples as sum of parts\n",
+    "                - documents : \n",
+    "                    - combination of common themes (here components = topics)\n",
+    "                    - eg : tf-idf\n",
+    "                - images : \n",
+    "                    - combination of common patterns (here components = frequent patterns)\n",
+    "                    - eg : grayscale image\n",
+    "                    - need to flatten from 2D to 1D row in order to feed into NMF\n",
+    "                    - later can be reshaped from 1D to 2D to re-construct the image\n",
+    "            - works well with both normal and sparse arrays\n",
+    "            - Models are interpretable\n",
+    "            - All sample features must be non-negative\n",
+    "            - sum of (components * feature value) = reconstruction of sample\n",
     "        - TruncatedSVD : PCA alternative that works on sparse dataset where most entries are 0. (eg : \"tf-idf\")\n",
     "- Market basket analysis: Find items that are frequently bought together (eg: pencil and eraser) \n",
     "- Anomaly detection : When data appears outside of normal range (outlier). eg: Suspicious Credit Card Transactions\n",
@@ -281,7 +296,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NMF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.decomposition import NMF\n",
+    "model = NMF(n_components=2)\n",
+    "model.fit(samples)\n",
+    "nmf_features = model.transform(samples)\n",
+    "# dimension of components = dimension of samples : non-negative (For a matrix Y = AX, this is A)\n",
+    "print(model.components_)\n",
+    "# NMF features : non-negative (For a matrix Y = AX, this is X)\n",
+    "print(nmf_features)\n",
+    "# Reconstruction of Sample = Matrix factorization of feature and components (For a matrix Y = AX, this is Y)\n",
+    "# comparing NMFs\n",
+    "import pandas as pd\n",
+    "norm_features = normalize(nmf_features)\n",
+    "df = pd.DataFrame(norm_features, index=titles)\n",
+    "# Select a specific row as target article\n",
+    "current_article = df.loc['Dog bites man']\n",
+    "# Find other rows as similar articles\n",
+    "similarities = df.dot(current_article)\n",
+    "# View largest similarities\n",
+    "print(similarities.nlargest())\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
