Chapter 2 : Hierarchical Clustering

--- a/Python/Cluster Analysis in Python/takeaways.ipynb
+++ b/Python/Cluster Analysis in Python/takeaways.ipynb
@@ -42,6 +42,7 @@
     "                - single linkage = when distance between clusters is minimum distance between samples\n",
     "            - At final step, there is only one cluster (\"agglomerative\") or the merging is done until the specified no of clusters are created\n",
     "            - The reverse way of doing the same thing by splitting : Divisive clustering\n",
+    "            - Computation time increases exponentially with the increase of datapoints, therefore not optimal choice\n",
     "    - Dimension reduction : Reduce redundant features in data in order to produce simpler model\n",
     "        - Identifies less informative features as noisy features\n",
     "        - Pattern Information achieved in a compressed form\n",
@@ -116,6 +117,79 @@
     "df[\"minmax_scaled\"] = (df[\"col\"] - df[\"col\"].min()) / (df[\"col\"].max() - df[\"col\"].min())\n",
     "# Z-score\n",
     "df[\"z_scaled\"] = (df[\"col\"] - df[\"col\"].mean()) / df[\"col\"].std()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hierarchical clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.cluster.hierarchy import linkage, dendrogram\n",
+    "sample = df.drop(\"target\", axis=1)\n",
+    "mergings = linkage(sample.values, method='complete', metric='euclidean', optimal_ordering=False)\n",
+    "# Visualize\n",
+    "dendrogram(mergings, labels=df[\"target].values, leaf_rotation=90, leaf_font_size=6)\n",
+    "plt.show()\n",
+    "from scipy.cluster.hierarchy import fcluster\n",
+    "# Take only specified portion of cluster based on distance\n",
+    "labels = fcluster(mergings, 15, criterion='distance')\n",
+    "print(labels)\n",
+    "df['predicted_labels'] = labels\n",
+    "# See distribution of samples \n",
+    "ct = pd.crosstab(df['predicted_labels'], df['target'])\n",
+    "print(ct)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Measure Timing performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import time\n",
+    "# Measure execution time\n",
+    "start = time.time()\n",
+    "### Your code .......\n",
+    "end = time.time()\n",
+    "print(end - start)\n",
+    "\n",
+    "# Alternative approach 1 : simulating many runs on a function\n",
+    "import timeit\n",
+    "time_taken = timeit.timeit(example_function, number=1000)\n",
+    "\n",
+    "# Alternative approach 2 : simulating many runs on a function\n",
+    "%timeit example_function()\n",
     "```"
    ]
   }
