Chapter 3 : K-Means Clustering

--- a/Python/Cluster Analysis in Python/takeaways.ipynb
+++ b/Python/Cluster Analysis in Python/takeaways.ipynb
@@ -27,7 +27,8 @@
     "            - Number of groups formed by samples (rows in dataset)\n",
     "            - calculates the mean of each cluster as centroid\n",
     "            - randomly assign centroids and shift the centroids based on mean of nearest samples in specified iterations\n",
-    "            - Inertia : how far the samples are from centroids. good clustering has low inertia\n",
+    "            - Inertia / Distortion : how far the samples are from centroids. good clustering has low inertia or distortion\n",
+    "            - Limitation : biased towards equal size clustering, not good for uniform data\n",
     "        - Scatterplot visualization\n",
     "        - t-SNE : \n",
     "            - maps data from high dimension to 2 dimensional space for visualization\n",
@@ -42,7 +43,7 @@
     "                - single linkage = when distance between clusters is minimum distance between samples\n",
     "            - At final step, there is only one cluster (\"agglomerative\") or the merging is done until the specified no of clusters are created\n",
     "            - The reverse way of doing the same thing by splitting : Divisive clustering\n",
-    "            - Computation time increases exponentially with the increase of datapoints, therefore not optimal choice\n",
+    "            - Limitation : Computation time increases exponentially with the increase of datapoints, therefore not optimal choice\n",
     "    - Dimension reduction : Reduce redundant features in data in order to produce simpler model\n",
     "        - Identifies less informative features as noisy features\n",
     "        - Pattern Information achieved in a compressed form\n",
@@ -192,6 +193,55 @@
     "%timeit example_function()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Import necessary libraries\n",
+    "from scipy.cluster.vq import kmeans, vq\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Make sure the columns you are working with are in \"float\" datatype\n",
+    "# Otherwise scipy generates an error while doing kmeans\n",
+    "df1['x'] = df1['x'].astype(float)\n",
+    "df1['y'] = df1['y'].astype(float)\n",
+    "# Step1 : Compute cluster centers (centroids) and the overall mean of squared distance of datapoints from the centers (distorion)\n",
+    "centroids, overall_distortion = kmeans(df1[['x', 'y']], 2)\n",
+    "\n",
+    "# Step 2 : Predict the labels of clusters and the squared distance of datapoints from the centers (distorion)\n",
+    "df1['cluster_labels'], distortion_list = vq(df1[['x', 'y']], centroids)\n",
+    "\n",
+    "# Plot the points with seaborn\n",
+    "sns.scatterplot(x='x', y='y', hue='cluster_labels', data=df1)\n",
+    "plt.show()\n",
+    "\n",
+    "# Find best k through elbow plot: k on X-axis and overall_distortion on Y-axis\n",
+    "plt.plot(x=k_list, y=overall_distortion_list)\n",
+    "plt.show()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
