Chapter 4 : Clustering in Real World

--- a/Python/Cluster Analysis in Python/takeaways.ipynb
+++ b/Python/Cluster Analysis in Python/takeaways.ipynb
@@ -241,7 +241,88 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import re\n",
+    "def remove_noise(text, stop_words = []):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    cleaned_tokens = []\n",
+    "    for token in tokens:\n",
+    "        token = re.sub('[^A-Za-z0-9]+', '', token)\n",
+    "        if len(token) > 1 and token.lower() not in stop_words:\n",
+    "            # Get lowercase\n",
+    "            cleaned_tokens.append(token.lower())\n",
+    "    return cleaned_tokens\n",
+    "\n",
+    "# Calling the function to remove noise and get cleaned tokens\n",
+    "token_list = remove_noise(\"It is lovely weather we are having. I hope the weather continues.\")    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tf-idf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "# nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "documents = ['cats say meow', 'dogs say woof', 'dogs chase cats']\n",
+    "# Import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "# Create a TfidfVectorizer: tfidf\n",
+    "# maximum and minimum fraction a word should occur in is 20% to 80%,  keep top 50 termms\n",
+    "tfidf = TfidfVectorizer(max_df=0.8, min_df=0.2, max_features=50, stop_words=stop_words)\n",
+    "# Apply fit_transform to document: csr_mat\n",
+    "csr_mat = tfidf.fit_transform(documents)\n",
+    "# Print result of toarray() method\n",
+    "print(csr_mat.toarray())\n",
+    "# Get the words: words\n",
+    "words = tfidf.get_feature_names() # tfidf.get_feature_names_out()\n",
+    "# Print words\n",
+    "print(words)\n",
+    "# Create a dataframe from this sparse matrix representation\n",
+    "df = pd.DataFrame(data=csr_mat.toarray(), columns=words)\n",
+    "# From dataframe to sparse dataframe\n",
+    "sparse_df = some_df.sparse.to_coo()\n",
+    "# From sparse to dense dataframe\n",
+    "dense_df = sparse_df.to_dense()\n",
+    "\n",
+    "# Clustering on tf-idf\n",
+    "num_clusters = 2  # You can adjust this as needed\n",
+    "cluster_centers, distortion = kmeans(csr_mat.todense(), num_clusters)\n",
+    "df['cluster_labels'], _ = vq(csr_mat.todense(), cluster_centers)\n",
+    "# Display top terms for each cluster\n",
+    "for i in range(num_clusters):\n",
+    "    cluster_df = df[df['cluster_labels'] == i]\n",
+    "    top_terms = cluster_df.mean().sort_values(ascending=False).head().index\n",
+    "    print(top_terms)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
